--- a/style.css
+++ b/style.css
@@ -1,14 +1,32 @@
 *{
-    margin: 0; 
-    padding: 0; 
-    box-sizing: border-box; 
-    font-family: 'Poppins', sans-serif; 
+  margin: 0; 
+  padding: 0; 
+  box-sizing: border-box; 
+  font-family: 'Poppins', sans-serif; 
 
 }
+
 
 .section-title{
-    text-align: center; 
+  text-align: center; 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*Begin CSS for responsive navbar*/ 
 :root {
     --navbar-bg-color: hsl(0, 0%, 15%);
@@ -54,8 +72,7 @@
     width: 100%;
   }
   
-  .home-link,
-  .navbar-link {
+  .home-link, .navbar-link {
     color: var(--navbar-text-color);
     text-decoration: none;
     display: flex;
@@ -184,9 +201,31 @@
 /*End CSS for responsive navbar*/ 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
 #home{
     min-height: 100vh; 
 }
+
+
+
+
+
+
+
+
+
+
 
 
 /*Begin CSS for Hero Section */ 
@@ -197,28 +236,68 @@
     align-items: center; 
     flex-direction: column; 
     min-height: 100vh;
+    background: url("back.jpg"); 
+    background-size: cover; 
+}
+.hero-btns button {
+  border-radius: 10px; 
+  padding: 10px; 
 }
 
+.hero-btns button > a{
+  text-decoration: none; 
+  color: black; 
+}
 /*End CSS for Hero Section*/ 
+
+
+
+
+
+
+
+
+
+
 
 
 
 /*Begin CSS for about section*/ 
 #about{
-    min-height: 50vh; 
-    padding-top: 300px; 
-    padding-bottom: 350px;
-}
+  min-height: 100vh; 
+  background: url("about.jpg");
+  background-size: cover; 
 
+}
+.aboutdiv{
+  min-height: 50vh; 
+  text-align: center; 
+  padding: 100px 25px 100px 25px; 
+     
+
+}
+.about-text{
+  padding-top: calc(20vh - 100px); 
+  color: white
+}
 /*End CSS for about section*/ 
+
+
+
+
+
+
+
+
+
+
 
 /*Begin CSS for skills section*/
 #skills{
-    min-height: 50vh; 
-    padding-top: 300px; 
-    padding-bottom: 300px;
-    margin-left: 25px; 
-    margin-right: 25px;   
+  min-height: 100vh; 
+  padding: 100px 25px 100px 25px;  
+  background: url("skills.jpg");
+  background-size: cover;  
 }
 .skilldiv{ 
     margin-left: 10px; 
@@ -252,16 +331,23 @@
     }
 
   }
-
 /*End CSS for skills section*/ 
+
+
+
+
+
+
+
+
+
 
 /*Begin CSS for Project Section*/ 
 #projects{
     min-height: 100vh; 
-    padding-bottom: 50px; 
-    padding-top: 100px;
-    margin-left: 25px; 
-    margin-right: 25px; 
+    padding: 100px 25px 0px 25px; 
+    background: url("project.jpg");
+    background-size: cover;
 }
 .individual-project-title{
     text-align: center; 
@@ -276,23 +362,28 @@
 
 .individual-project-container{
     border: 2px solid black; 
-    display: flex;
     border-radius: 20px; 
-    flex-basis: 700px; 
-    height: 300px; 
+    min-height: 300px; 
+    display: flex; 
+    width: 100%; 
+    max-height: 400px; 
+   
 }
 
-.project-image-content{
-    flex: 40%;  
+.project-image-content{ 
     position: relative; 
-    padding: 5px; 
-    margin: 10px; 
+    padding: 0px 20px 0px 20px; 
+    
+
 }
+
 
 .project-image{
     float: right; 
-    max-width: 100%; 
-    max-height: 100%;  
+    height: 100%; 
+    width: 100%;
+    object-fit: contain; 
+ 
 }
 
 .project-text-content{
@@ -305,15 +396,12 @@
     }
     .individual-project-container{
         flex-direction: column;
+        max-height: none; 
+        align-items: center; 
     }
     .project-image{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
         float: none; 
     }
 
   }
-
 /*End CSS for project section*/ 
