--- a/style.css
+++ b/style.css
@@ -236,8 +236,8 @@
     align-items: center; 
     flex-direction: column; 
     min-height: 100vh;
-    background: url("back.jpg"); 
-    background-size: cover; 
+    /*background: url("back.jpg"); 
+    background-size: cover; */ 
 }
 .hero-btns button {
   border-radius: 10px; 
@@ -265,8 +265,8 @@
 /*Begin CSS for about section*/ 
 #about{
   min-height: 100vh; 
-  background: url("about.jpg");
-  background-size: cover; 
+  /*background: url("about.jpg");
+  background-size: cover; */ 
 
 }
 .aboutdiv{
@@ -278,7 +278,7 @@
 }
 .about-text{
   padding-top: calc(20vh - 100px); 
-  color: white
+  color: black; 
 }
 /*End CSS for about section*/ 
 
@@ -296,8 +296,8 @@
 #skills{
   min-height: 100vh; 
   padding: 100px 25px 100px 25px;  
-  background: url("skills.jpg");
-  background-size: cover;  
+  /*background: url("skills.jpg");
+  background-size: cover;  */ 
 }
 .skilldiv{ 
     margin-left: 10px; 
@@ -384,6 +384,13 @@
     width: 100%;
     object-fit: contain; 
  
+}
+.project-link{
+  text-decoration: none; 
+  color: black; 
+}
+.project-link:hover{
+  color: green; 
 }
 
 .project-text-content{
