--- a/style.css
+++ b/style.css
@@ -395,6 +395,7 @@
 .project-text-content{
     flex: 60%; 
     margin: 10px; 
+    word-wrap:  break-word; 
 }
 @media screen and (max-width: 700px) {
     .projectdiv{
