--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@
     gap: 20px; 
     justify-content: center;   
     margin-left: 10px;
+    padding-bottom: 20px; 
 }
 
 .individual-project-container{
@@ -371,7 +372,7 @@
 .project-image-content{ 
     position: relative;
     margin: auto; 
-    padding: 0px 20px 0px 20px; 
+    padding: 20px 20px 20px 20px; 
 }
 
 
