--- a/style.css
+++ b/style.css
@@ -236,17 +236,36 @@
     align-items: center; 
     flex-direction: column; 
     min-height: 100vh;
+    background: rgb(63,94,251);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
     /*background: url("back.jpg"); 
-    background-size: cover; */ 
+    background-size: 100vw 100vh; */
 }
 .hero-btns button {
   border-radius: 10px; 
   padding: 10px; 
+  font-size: 1.5rem;
+  position: relative;
+  top: 0;
+  transition: top ease 0.5s;
+  margin: 10px; 
 }
-
+.hero-btns button:hover {
+  top: -10px; 
+}
 .hero-btns button > a{
   text-decoration: none; 
   color: black; 
+}
+.mainName{
+  font-size: 4rem; 
+  border-width: 2px; 
+  text-transform: capitalize; 
+  text-shadow: 1px 1px 1px hotpink, 3px -3px 3px black; 
+  color: white;
+}
+.mainName:hover{
+  font-size: 5rem; 
 }
 /*End CSS for Hero Section*/ 
 
@@ -265,20 +284,117 @@
 /*Begin CSS for about section*/ 
 #about{
   min-height: 100vh; 
+  background: rgb(2,0,36);
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(24,110,126,1) 35%, rgba(0,212,255,1) 75%);
   /*background: url("about.jpg");
-  background-size: cover; */ 
+  background-size: cover; */
 
 }
 .aboutdiv{
   min-height: 50vh; 
   text-align: center; 
   padding: 100px 25px 100px 25px; 
-     
-
+  text-align: center; 
 }
 .about-text{
   padding-top: calc(20vh - 100px); 
-  color: black; 
+}
+.corkboard{
+  background: url(cork-board.jpg);
+  background-size: 100% 100%; 
+  /*width: 800px;*/ 
+  min-height: 600px;
+  padding-top: 35px;
+  /*padding-left: 35px;*/ 
+  /*display: grid; 
+  grid-template-columns: repeat(3, 1fr); 
+  grid-template-rows: repeat(3, 1fr); */ 
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: space-between; 
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  overflow: hidden; 
+}
+.note {
+  width: 230px; 
+  height: 230px; 
+  box-shadow: 0 3px 6px rgba(0,0,0,.25); 
+  float: left; 
+  margin: 8px; 
+  text-align: center; 
+  border: 1px solid rgba(0,0,0,.25); 
+  padding: 8px; 
+}
+.sticky1{
+  transform: rotate(-3.5deg); 
+  background-color: #facbf2; 
+  margin-left: 40px; 
+}
+.sticky2{
+  align-self: center; 
+  transform: rotate(3.5deg); 
+  background-color: #6ff0c5; 
+  width: 240px; 
+  height: 240px; 
+}
+.sticky3{
+  align-self: flex-end; 
+  transform: rotate(1.5deg); 
+  margin-bottom: 30px; 
+  margin-right: 30px; 
+  background-color: #e9e27c; 
+}
+.corkboard .note > .pin {
+  display: inline-block; 
+  width: 20px; 
+  height: 20px; 
+  border-radius: 50%; 
+  background-image: -moz-radial-gradient(45px 45px 45deg, circle cover, red 50%, black 100%);
+  background-image: -webkit-radial-gradient(45px 45px, circle cover, red, black);
+  background-image: radial-gradient(red 50%, black 100%);
+}
+.text > p{
+  margin-bottom: 20px; 
+}
+.sociallink{
+  text-decoration: none; 
+  margin-left: 10px; 
+  color:hsl(0, 0%, 25%); 
+}
+.sociallink:hover{
+  font-size: large; 
+}
+.like{
+  font-size: 13px; 
+  display: inline;
+}
+.sociallist{
+  vertical-align: center; 
+}
+@media screen and (max-width: 1400px) {
+  .corkboard{
+    width: 70%; 
+  }
+
+}
+@media screen and (max-width: 800px) {
+  .corkboard{
+    width: 80%; 
+  }
+
+}
+@media screen and (max-width: 650px) {
+  .corkboard{
+    flex-direction: column; 
+  }
+  
+}
+@media screen and (max-width: 600px) {
+  .corkboard{
+    width: 95%; 
+  }
 }
 /*End CSS for about section*/ 
 
@@ -295,9 +411,16 @@
 /*Begin CSS for skills section*/
 #skills{
   min-height: 100vh; 
-  padding: 100px 25px 100px 25px;  
+  padding: 100px 25px 100px 25px; 
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
   /*background: url("skills.jpg");
   background-size: cover;  */ 
+}
+.iconify{
+  height: 24px; 
+  width: 24px; 
+  margin-right: 10px; 
 }
 .skilldiv{ 
     margin-left: 10px; 
@@ -314,6 +437,7 @@
 .skill-type{
     flex: 1; 
     border: 2px solid black; 
+    border-radius: 20px; 
     min-height: 50vh; 
     display: flex; 
     flex-direction: column; 
@@ -345,7 +469,9 @@
 /*Begin CSS for Project Section*/ 
 #projects{
     min-height: 100vh; 
-    padding: 100px 25px 0px 25px; 
+    padding: 100px 25px 0px 25px;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     /*background: url("project.jpg");
     background-size: cover;*/
 }
@@ -366,7 +492,9 @@
     border-radius: 20px; 
     min-height: 300px; 
     display: flex; 
-    width: 100%;  
+    width: 80%;  
+    margin-left: auto; 
+    margin-right: auto; 
 }
 
 .project-image-content{ 
@@ -374,7 +502,10 @@
     margin: auto; 
     padding: 20px 20px 20px 20px; 
 }
-
+.projectskill{
+  padding-top: 10px; 
+  padding-bottom: 10px;
+}
 
 .project-image{
     float: right; 
@@ -382,12 +513,15 @@
     width: 100%;
     object-fit: contain; 
 }
+.projectdesc{
+  padding-bottom: 20px; 
+}
 .project-link{
   text-decoration: none; 
-  color: black; 
+  color:hsl(0, 0%, 25%);  
 }
 .project-link:hover{
-  color: green; 
+  font-size: large; 
 }
 
 .project-text-content{
@@ -395,8 +529,9 @@
     margin: 10px; 
     padding-bottom: 10px; 
     word-wrap:  break-word; 
+    text-align: center; 
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
     .projectdiv{
         flex-direction: column; 
     }
