--- a/style.css
+++ b/style.css
@@ -518,11 +518,11 @@ background: radial-gradient(circle, rgba(252,228,216,1) 0%, rgba(245,219,89,1) 4
   padding-bottom: 20px; 
 }
 .project-link{
-  text-decoration: none; 
-  color:hsl(0, 0%, 25%);  
+  text-decoration: underline; 
+  color:hsl(224, 71%, 46%);  
 }
 .project-link:hover{
-  font-size: large; 
+  text-decoration: underline wavy; 
 }
 
 .project-text-content{
