--- a/style.css
+++ b/style.css
@@ -554,6 +554,14 @@ background: radial-gradient(circle, rgba(252,228,216,1) 0%, rgba(245,219,89,1) 4
 /*End CSS for project section*/ 
 
 /*BEGIN CSS FOR ECE295 PAGE*/
+.ece295name{
+  font-size: 4rem; 
+  border-width: 2px; 
+  text-transform: capitalize; 
+  text-shadow: 1px 1px 1px hotpink, 3px -3px 3px black; 
+  color: white;
+
+}
 .ece295imgcontent{
   text-align: center; 
   width: 80%; 
