--- a/style.css
+++ b/style.css
@@ -555,7 +555,7 @@ background: radial-gradient(circle, rgba(252,228,216,1) 0%, rgba(245,219,89,1) 4
 
 /*BEGIN CSS FOR ECE295 PAGE*/
 .ece295name{
-  font-size: 4em; 
+ /* font-size: 4em; */
   border-width: 2px; 
   text-transform: capitalize; 
   text-shadow: 1px 1px 1px hotpink, 3px -3px 3px black; 
@@ -579,7 +579,7 @@ background: radial-gradient(circle, rgba(252,228,216,1) 0%, rgba(245,219,89,1) 4
   flex-direction: column; 
   align-items: center; 
   justify-content: center; 
-  padding: 20px 10% 10% 5%; 
+  padding: 20px 5% 10% 5%; 
   overflow: hidden;
 }
 
